--- a/dev/manifests/vault/vault.yaml
+++ b/dev/manifests/vault/vault.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   size: 1
   # Use the custom vault image containing the NATS secrets plugin
-  image: siredmar/vault-plugin-secrets-nats:dev6
+  image: ghcr.io/edgefarm/vault-plugin-secrets-nats/vault-with-nats-secrets:1.5.2
 
   # Common annotations for all created resources
   annotations:
@@ -129,7 +129,7 @@ spec:
     plugins:
       - plugin_name: vault-plugin-secrets-nats
         command: vault-plugin-secrets-nats --tls-skip-verify --ca-cert=/vault/tls/ca.crt
-        sha256: be9598c2cda1d58eed933def71290b1ae7c57a15fcecc0d1bbf320bd14df0b6e
+        sha256: 62b842dbc90748b199d660fe620e4f18bf507de0d6d693cd2cab97fc0680545a
         type: secret
 
     policies:
