--- a/.releaserc.json
+++ b/.releaserc.json
@@ -6,6 +6,9 @@
     {
       "name": "beta",
       "prerelease": true
+    },
+    {
+      "name": "zs"
     }
   ],
   "plugins": [
@@ -23,7 +26,7 @@
         "registries": [
           {
             "url": "ghcr.io",
-            "imageName": "ghcr.io/edgefarm/vault-plugin-secrets-nats/vault-with-nats-secrets",
+            "imageName": "ghcr.io/zerosubnet/vault-plugin-secrets-nats/vault-with-nats-secrets",
             "user": "GITHUB_USER",
             "password": "GITHUB_TOKEN"
           }
@@ -52,12 +55,7 @@
       {
         "assets": [
           {
-            "path": "build/vault/plugins/vault-plugin-secrets-nats",
-            "label": "vault-plugin-secrets-nats"
-          },
-          {
-            "path": "build/vault/plugins/vault-plugin-secrets-nats.sha256",
-            "label": "vault-plugin-secrets-nats.sha256"
+            "path": "build/vault/plugins/vault-plugin-secrets-*"
           }
         ]
       }
